# gymio

./: .gitignore  DEPLOY.md  RPI_SETUP_LOG.md
backend/: main.py  pyproject.toml
backend/.claude/: ralph-loop.local.md
backend/ai/: coach.py
backend/ble_system/: hr_service.py
backend/button/: button.py
backend/data/: powerbuilding_program.json
backend/database/: models.py  seed_exercises.py
backend/lights/: lights.py
backend/my_types/: Timer.py
backend/server/: api.py  connection_manager.py
backend/sonos/: __init__.py  sonos.py
backend/trainer/: nine_round.py  trainer.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  index.jsx  store.jsx
frontend/src/components/: AiCoach.jsx  Controls.jsx  HeartRate.jsx  HeartRateChart.jsx  NineRound.jsx  NowPlaying.jsx  ProgramView.jsx  SessionRecap.jsx  SessionStats.jsx  Timer.jsx  TodayWorkout.jsx  UserSwitcher.jsx  WorkoutJournal.jsx  WorkoutSetup.jsx
frontend/src/components/ui/: button.jsx  card.jsx  select.jsx  slider.jsx
frontend/src/hooks/: useApi.js  useDemoMode.js  useWebSocket.js
frontend/src/layouts/: LayoutSwitcher.jsx  PhoneLayout.jsx  WallLayout.jsx
scripts/: setup-kiosk.sh
